Move to Java 11 and Antlr 4.9