@@ -1,14 +1,14 @@
 package it.twenfir.ddsparser.ast;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Iterator;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -36,7 +36,7 @@ public class AstUnitTests extends TestBase {
 		assertNotNull(ast);
 		assertNotNull(ast.getFields().next());
 		Field f = ast.getFields().next();
-		assertEquals(new Integer(10), f.getDataType().getSize());
+		assertEquals(Integer.valueOf(10), f.getDataType().getSize());
 		assertFalse(ast.getKeys().hasNext());
 	}
 
